home blocks spacing fixes

--- a/assets/styles/04-components/home-blocks.scss
+++ b/assets/styles/04-components/home-blocks.scss
@@ -230,21 +230,19 @@
 * Home block spacing situations 
 */
 
-// Footer top spacing
 .s-block {
+  // Footer top spacing
   &--hero-slider,
   &--full-banner,
   &--tabs-produtcs,
   &--logos-slider,
   &--slider-with-bg {
     + #footer {
-      padding-top: 0;
+      margin-top: 0;
     }
   }
-}
 
-// hero top spacing
-.s-block {
+  // hero top spacing
   &--hero-slider,
   &--full-banner,
   &--tabs-produtcs,
@@ -254,10 +252,8 @@
       margin-top: 0;
     }
   }
-}
 
-// promotion top spacing
-.s-block {
+  // pomotion top spacing
   &--full-banner,
   &--hero-slider,
   &--tabs-produtcs,
@@ -267,10 +263,8 @@
       margin-top: 0;
     }
   }
-}
 
-// brands top spacing
-.s-block {
+  // brands top spacing
   &--logos-slider,
   &--hero-slider,
   &--tabs-produtcs,
@@ -280,10 +274,8 @@
       margin-top: 0;
     }
   }
-}
 
-// tabs top spacing
-.s-block {
+  // tabs top spacing
   &--tabs-produtcs,
   &--hero-slider,
   &--logos-slider,
@@ -293,9 +285,8 @@
       margin-top: 0;
     }
   }
-}
 
-.s-block {
+  // slider with header & bg
   &--slider-with-bg,
   &--hero-slider,
   &--tabs-produtcs,
